--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,11 @@ jobs:
     docker: 
       - image: circleci/node:13.8.0
     steps:
+      - restore_cache:
+          name: Restore npm package cache
+          keys:
+          - v1-npm-deps-
+
       - checkout
       - run:
           name: test-backend
