--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs:
           name: scan-frontend
           command: |
               cd frontend
-              npm audit --audit-level=critical --force
+              npm audit fix --force
 
 
 
@@ -87,7 +87,7 @@ jobs:
           name: scan-backend
           command: |
               cd backend
-              npm audit --audit-level=critical --force
+              npm audit fix --force
               
 
 
