--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
           name: test-backend
           command: |
               cd backend
-              npm install
+              npm fund
               npm run test
       
 
@@ -70,7 +70,6 @@ jobs:
           name: scan-frontend
           command: |
               cd frontend
-              npm install
               npm audit fix --force
 
 
