--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
           name: test-backend
           command: |
               cd backend
-              npm fund
+              npm install
               npm run test
       
 
@@ -70,6 +70,7 @@ jobs:
           name: scan-frontend
           command: |
               cd frontend
+              npm install
               npm audit fix --force
 
 
@@ -88,6 +89,7 @@ jobs:
           command: |
               cd backend
               npm install
+              npm fund
               npm audit fix --force
               
 
