--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,6 +126,7 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
+      - deploy-infrastructure
       - test-frontend:
           requires: [build-frontend]
       - test-backend:
