--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,6 @@
 version: 2.1
 
+
 jobs:
   build-frontend:
     docker:
@@ -98,9 +99,11 @@ jobs:
               npm fund
               npm audit fix --force
 
+
+
     deploy-infrastructure:
       docker:
-        - image: circleci/aws-cli@3.1.1
+        - image: circleci/aws-cli
       steps:
         - checkout
         - run:
