--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,7 +100,7 @@ jobs:
 
   deploy-infrastructure:
       docker:
-        - image: circleci/aws-cli@3.1.1
+        - image: circleci/aws-cli
       steps:
         - checkout
         - run:
