--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,8 @@ jobs:
                   aws cloudformation deploy \
                           --template-file cloudfront.yml \
                           --stack-name InitialStack \
-                          --parameter-overrides WorkflowID=udapeople-kk1j287dhjppmz0000
+                          --parameter-overrides WorkflowID=udapeople-kk1j287dhjppmz0000 \
+                          --region us-east-1
 
     
               
