--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -164,7 +164,11 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-      - deploy-infrastructure
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [master]
       - test-frontend:
           requires: [build-frontend]
       - test-backend:
