--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,8 +113,7 @@ jobs:
                   aws cloudformation deploy \
                           --template-file cloudfront.yml \
                           --stack-name InitialStack \
-                          --parameter-overrides WorkflowID=udapeople-kk1j287dhjppmz0000 \
-                          --region us-east-1
+                          --parameter-overrides WorkflowID=udapeople-kk1j287dhjppmz0000 
 
         - run:
             name: Install backend dependencies
@@ -134,29 +133,48 @@ jobs:
                         --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
                         --tags project=udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
         - run:
-          name: Add backend ip to ansible inventory
-          working_directory: ./.circleci/ansible
-          command: |
+            name: Add backend ip to ansible inventory
+            working_directory: ./.circleci/ansible
+            command: |
               aws ec2 describe-instances \
                   --query 'Reservations[*].Instances[*].PublicIpAddress' \
                   --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
                   --output text >> inventory
               cat inventory
         - persist_to_workspace:
-          root: .
-          paths:
+            root: .
+            paths:
             - .circleci/ansible/inventory
         - destroy_environment:
+            id: ${CIRCLE_WORKFLOW_ID:0:7}
+            when: on_fail
+
+
+  configure-infrastructure:
+    executor: python
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["71:a6:8f:bd:22:e2:4b:d8:4f:e3:35:03:b1:ef:64:d4"]
+      - attach_workspace:
+          at: .
+      - run:
+          name: Install dependencies
+          working_directory: ./.circleci/ansible
+          command: |
+            apk add --update ansible
+            ansible --version
+      - run:
+          name: Configure server
+          working_directory: ./.circleci/ansible
+          command: |
+            pwd &&
+            ls -la
+            cat inventory
+            ansible-playbook -i inventory configure-server.yaml
+      - destroy_environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
-          when: on_fail
-
-    
-              
-
-
-
-
-
+          when: on_fail  
 
 
 workflows:
@@ -164,11 +182,6 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-          filters:
-            branches:
-              only: [master]
       - test-frontend:
           requires: [build-frontend]
       - test-backend:
@@ -177,3 +190,9 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
+      - configure-infrastructure
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [master]
