--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,58 +100,58 @@ jobs:
               npm audit fix --force
 
   deploy-infrastructure:
-      docker:
-        - image: amazon/aws-cli
-      steps:
-        - checkout
-        - run:
-            name: Install dependencies
-            command: yum install -y tar gzip
-        - run:
-            command: |
-                  cd .circleci/files
-                  aws cloudformation deploy \
-                          --template-file cloudfront.yml \
-                          --stack-name InitialStack \
-                          --parameter-overrides WorkflowID=udapeople-kk1j287dhjppmz0000 
-
-        - run:
-            name: Install backend dependencies
-            command: |
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: yum install -y tar gzip
+      - run:
+          command: |
+                cd .circleci/files
                 aws cloudformation deploy \
-                        --template-file .circleci/files/backend.yml \
-                        --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-                        --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
-                        --tags project=udapeople
-        - run:
-            name: Deploy frontend infrastructure
-            working_directory: ./.circleci/files
-            command: |
-                aws cloudformation deploy \
-                        --template-file frontend.yaml \
-                        --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
-                        --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
-                        --tags project=udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
-        - run:
-            name: Add backend ip to ansible inventory
-            working_directory: ./.circleci/ansible
-            command: |
+                        --template-file cloudfront.yml \
+                        --stack-name InitialStack \
+                        --parameter-overrides WorkflowID=udapeople-kk1j287dhjppmz0000 
+      - run:
+          name: Install backend dependencies
+          command: |
+              aws cloudformation deploy \
+                      --template-file .circleci/files/backend.yml \
+                      --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+                      --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
+                      --tags project=udapeople
+      - run:
+          name: Deploy frontend infrastructure
+          working_directory: ./.circleci/files
+          command: |
+              aws cloudformation deploy \
+                    --template-file frontend.yaml \
+                    --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+                    --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
+                    --tags project=udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+      - run:
+          name: Add backend ip to ansible inventory
+          working_directory: ./.circleci/ansible
+          command: |
               aws ec2 describe-instances \
                   --query 'Reservations[*].Instances[*].PublicIpAddress' \
                   --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
                   --output text >> inventory
               cat inventory
-        - persist_to_workspace:
-            root: .
-            paths:
-            - .circleci/ansible/inventory
-        - destroy_environment:
-            id: ${CIRCLE_WORKFLOW_ID:0:7}
-            when: on_fail
+      - persist_to_workspace:
+          root: .
+          paths:
+          - .circleci/ansible/inventory
+      - destroy_environment:
+          id: ${CIRCLE_WORKFLOW_ID:0:7}
+          when: on_fail
 
 
   configure-infrastructure:
-    executor: python
+    docker:
+      - image: python:3.9.0-alpine
     steps:
       - checkout
       - add_ssh_keys:
@@ -190,9 +190,9 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
-      - configure-infrastructure
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
               only: [master]
+      - configure-infrastructure
