--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,6 +114,7 @@ jobs:
                         --template-file cloudfront.yml \
                         --stack-name InitialStack \
                         --parameter-overrides WorkflowID=udapeople-kk1j287dhjppmz0000 
+                        exit 1
       - run:
           name: Install backend dependencies
           command: |
@@ -122,6 +123,7 @@ jobs:
                       --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
                       --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
                       --tags project=udapeople
+                      exit 1
       - run:
           name: Deploy frontend infrastructure
           working_directory: ./.circleci/files
@@ -131,23 +133,9 @@ jobs:
                     --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
                     --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
                     --tags project=udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
-      - run:
-          name: Add backend ip to ansible inventory
-          working_directory: ./.circleci/ansible
-          command: |
-              aws ec2 describe-instances \
-                  --query 'Reservations[*].Instances[*].PublicIpAddress' \
-                  --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-                  --output text >> inventory
-              cat inventory
-      - persist_to_workspace:
-          root: .
-          paths:
-          - .circleci/ansible/inventory
-      - destroy_environment:
-          id: ${CIRCLE_WORKFLOW_ID:0:7}
-          when: on_fail
-
+                    exit 1
+   
+     
 
   config-infra:
     docker:
@@ -172,7 +160,7 @@ jobs:
             ls -la
             cat inventory
             ansible-playbook -i inventory configure-server.yaml
-      - destroy_environment:
+      - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
           when: on_fail  
 
@@ -192,5 +180,4 @@ workflows:
           requires: [build-frontend]
       - deploy-infra:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      - config-infra:
-          requires: [deploy-infra]
+    
