--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,7 +116,7 @@ jobs:
                         --parameter-overrides WorkflowID=udapeople-kk1j287dhjppmz0000 
                         exit 1
       - run:
-          name: Install backend dependencies
+          name: ensure backend infrastructure exists
           command: |
               aws cloudformation deploy \
                       --template-file .circleci/files/backend.yml \
@@ -134,35 +134,6 @@ jobs:
                     --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
                     --tags project=udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
                     exit 1
-   
-     
-
-  config-infra:
-    docker:
-      - image: python:3.9.0-alpine
-    steps:
-      - checkout
-      - add_ssh_keys:
-          fingerprints: ["71:a6:8f:bd:22:e2:4b:d8:4f:e3:35:03:b1:ef:64:d4"]
-      - attach_workspace:
-          at: .
-      - run:
-          name: Install dependencies
-          working_directory: ./.circleci/ansible
-          command: |
-            apk add --update ansible
-            ansible --version
-      - run:
-          name: Configure server
-          working_directory: ./.circleci/ansible
-          command: |
-            pwd &&
-            ls -la
-            cat inventory
-            ansible-playbook -i inventory configure-server.yaml
-      - destroy-environment:
-          id: ${CIRCLE_WORKFLOW_ID:0:7}
-          when: on_fail  
 
 
 workflows:
