--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,7 +159,7 @@ jobs:
           command: |
             pwd &&
             ls -la
-            cat inventory
+            cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
   
 
