--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,6 +161,41 @@ jobs:
             ls -la
             cat inventory
             ansible-playbook -i inventory.txt configure-server.yml
+
+
+  run-migrations:
+    docker:
+      - image: 
+    steps:
+      - checkout
+      - run:
+          name: Install AWS CLI dependencies
+          working_directory: /tmp
+          command: |
+              sudo apt-get update && sudo apt-get -yy less
+              curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+              unzip awscliv2.zip
+              sudo ./aws/install
+      - run:
+          name: Run migrations
+          working_directory: ./backend
+          command: |
+              npm run migrations > migration_status
+      - run: 
+          name: Send Migration results to memstash
+          working_directory: ./backend
+          command: |
+              if grep -q "has been executed successfully" migration_status
+              then
+                echo "DB migration was successful, will update memstash..."
+                curl -H "Content-Type: text/plain" -H "token:2a9e15d6-b9fa-a5dc-e3b9643a9b63" --request PUT --data "success" https://api.memstash.io/values/DB_MIGRATION_${CIRCLE_WORKFLOW_ID:0:7}
+              else
+                curl -H "DB migration failed, please verify setup! Probably the database already exists. Verify setup!"
+                curl -H "Content-Type: text/plain" -H "token: 2a9e15d6-b9fa-4b1f-a5dc-e3b9643a9b63" --request PUT --data "failure" https://api.memstash.io/values/DB_MIGRATION_${CIRCLE_WORKFLOW_ID:0:7}
+              fi 
+              echo "WorkflowID=${CIRCLE_WORKFLOW_ID:0:7}"
+              
+
   
 
 workflows:
