--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -182,19 +182,19 @@ jobs:
           command: |
               npm run migrations > migration_status
       - run: 
-          name: Send Migration results to memstash
+          name: Send Migration results to kvdb
           working_directory: ./backend
           command: |
               if grep -q "has been executed successfully" migration_status
               then
-                echo "DB migration was successful, will update memstash..."
-                curl -H "Content-Type: text/plain" -H "token:2a9e15d6-b9fa-a5dc-e3b9643a9b63" --request PUT --data "success" https://api.memstash.io/values/DB_MIGRATION_${CIRCLE_WORKFLOW_ID:0:7}
+                echo "DB migration was successful, will update kvdb..."
+                curl -H "Content-Type: text/plain" -H "token:LwfjS5JcxvnfaZhWDgyGw8" --request PUT --data "success" https://api.memstash.io/values/DB_MIGRATION_${CIRCLE_WORKFLOW_ID:0:7}
               else
                 curl -H "DB migration failed, please verify setup! Probably the database already exists. Verify setup!"
-                curl -H "Content-Type: text/plain" -H "token: 2a9e15d6-b9fa-4b1f-a5dc-e3b9643a9b63" --request PUT --data "failure" https://api.memstash.io/values/DB_MIGRATION_${CIRCLE_WORKFLOW_ID:0:7}
+                curl -H "Content-Type: text/plain" -H "token: LwfjS5JcxvnfaZhWDgyGw8" --request PUT --data "failure" https://api.memstash.io/values/DB_MIGRATION_${CIRCLE_WORKFLOW_ID:0:7}
               fi 
               echo "WorkflowID=${CIRCLE_WORKFLOW_ID:0:7}"
-              
+
 
   
 
