--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -180,15 +180,16 @@ jobs:
           name: Run migrations
           working_directory: ./backend
           command: |
-              npm run migrations > migration_status
+              npm run migrations > migrations_dump.txt
       - run: 
           name: Send Migration results to kvdb
           working_directory: ./backend
           command: |
-              if grep -q "has been executed successfully" migration_status
+              if grep -q "has been executed successfully" migrations_dump.txt
               then
                 echo "DB migration was successful, will update kvdb..."
-                curl -H "Content-Type: text/plain" -H "token:LwfjS5JcxvnfaZhWDgyGw8" --request PUT --data "success" https://api.memstash.io/values/DB_MIGRATION_${CIRCLE_WORKFLOW_ID:0:7}
+                curl https://kvdb.io/LwfjS5JcxvnfaZhWDgyGw8/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+
               else
                 curl -H "DB migration failed, please verify setup! Probably the database already exists. Verify setup!"
                 curl -H "Content-Type: text/plain" -H "token: LwfjS5JcxvnfaZhWDgyGw8" --request PUT --data "failure" https://api.memstash.io/values/DB_MIGRATION_${CIRCLE_WORKFLOW_ID:0:7}
