--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,7 +165,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: 
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - run:
@@ -216,4 +216,6 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       - configure-server:
           requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend, configure-server]
     
