--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,7 +172,7 @@ jobs:
           name: Install AWS CLI dependencies
           working_directory: /tmp
           command: |
-              sudo apt-get update && sudo apt-get -yy less
+              sudo apt-get update && sudo apt-get -y
               curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
               unzip awscliv2.zip
               sudo ./aws/install
@@ -217,5 +217,5 @@ workflows:
       - configure-server:
           requires: [deploy-infrastructure]
       - run-migrations:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend, configure-server]
+          requires: [configure-server]
     
