--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,7 +172,8 @@ jobs:
           name: Install AWS CLI dependencies
           working_directory: /tmp
           command: |
-              sudo apt-get update && sudo apt-get -y
+              sudo apt-get update 
+              sudo apt-get upgrade -y
               curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
               unzip awscliv2.zip
               sudo ./aws/install
