--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -182,6 +182,7 @@ jobs:
           working_directory: ./backend
           command: |
               npm install
+              npm audit
               npm run migrations > migrations_dump.txt
       - run: 
           name: Send Migration results to kvdb
