--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -182,7 +182,7 @@ jobs:
           working_directory: ./backend
           command: |
               npm install
-              npm audit fix
+              npm audit fix --force
               npm run migrations > migrations_dump.txt
       - run: 
           name: Send Migration results to kvdb
