--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -182,7 +182,9 @@ jobs:
           working_directory: ./backend
           command: |
               npm install
-              npm audit fix --force
+              npm fund
+              npm audit 
+              npm run build
               npm run migrations > migrations_dump.txt
       - run: 
           name: Send Migration results to kvdb
