--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,6 +183,7 @@ jobs:
           command: |
               npm install
               npm audit fix
+              npm cache clean
               npm run migrations > migrations_dump.txt
       - run: 
           name: Send Migration results to kvdb
