--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,6 +168,8 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
+      - restore_cache:
+          keys: [build-backend]
       - run:
           name: Install AWS CLI dependencies
           command: |
@@ -179,10 +181,10 @@ jobs:
       - run:
           name: Run migrations
           command: |
-              ls -al
               cd backend
-              npm i
+              npm install
               npm run migrations > migrations.txt
+              cat migrations.txt
       - run: 
           name: Send Migration results to kvdb
           command: |
@@ -192,8 +194,6 @@ jobs:
                 echo "DB migration was successful, will update kvdb..."
                 curl "https://kvdb.io/LwfjS5JcxvnfaZhWDgyGw8/migration_${CIRCLE_WORKFLOW_ID:0:7}"  -d '1'
               fi 
-              echo "WorkflowID=${CIRCLE_WORKFLOW_ID:0:7}"
-
 
   
 
