--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,17 +1,16 @@
 ---
-
 - name: "configuration play." 
   hosts: web
-  user: ubuntu
+  remote_user: ubuntu
   become: true
   become_method: sudo
   become_user: root  
   gather_facts: false
   vars:
     - ansible_python_interpreter: /usr/bin/python3
-    - ansible_host_key_checking: false
+    - ANSIBLE_HOST_KEY_CHECKING: False
     - ansible_stdout_callback: yaml
-    
+
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
       wait_for_connection:
@@ -26,4 +25,3 @@
   roles:
     - configure-server
     - configure-prometheus-node-exporter
- 
