--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,41 +1,33 @@
 ---
-  - name: "update apt packages."
-    become: yes
-    apt:
-      update_cache: yes
+- name: "update apt packages."
+  become: true
+  apt:
+    update_cache: "yes"
 
-  - name: "upgrade packages"
-    become: yes
-    apt:
-      upgrade: yes
+- name: "upgrade packages"
+  become: true
+  apt:
+    upgrade: "yes"
 
-  - name: "remove dependencies that are no longer required"
-    become: yes
-    apt:
-      autoremove: yes
+- name: "Remove dependencies that are no longer required"
+  become: true
+  apt:
+    autoremove: yes
 
-  - name: "install nodejs and npm"
-    become: yes
-    apt:
-      name: ["nodejs", "npm"]
-      state: latest
-      update_cache: yes
+- name: "Install Node.js 13"
+  become: true
+  shell: |
+    # Install Node.js LTS version as our base Node.js version
+    curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+    sudo apt install -y nodejs
+    # Use n version manager to use Node.js v13.8.0
+    sudo npm install --global n
+    sudo n 13.8.0
 
-  - name: "install n"
-    become: yes
-    npm:
-      name: n
-      global: yes
-      production: yes
-
-  - name: "install nodejs 13.8.0"
-    become: yes
-    shell: n 13.8.0
-
-  - name: "install pm2"
-    become: yes
-    npm:
-      name: pm2
-      global: yes
-      production: yes
-      state: present
+- name: "Install pm2"
+  become: true
+  npm:
+    name: pm2
+    global: yes
+    production: yes
+    state: present
