--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,7 +187,7 @@ jobs:
           command: |
               cd backend
               npm install
-              npm run migrations > migrations.txt
+              npm run migrations --force > migrations.txt
               cat migrations.txt
       - run: 
           name: Send Migration results to kvdb
