--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,6 +199,38 @@ jobs:
                 curl "https://kvdb.io/LwfjS5JcxvnfaZhWDgyGw8/migration_${CIRCLE_WORKFLOW_ID:0:7}"  -d '1'
               fi 
 
+
+
+  deploy-frontend:
+    docker:
+      - image: python:3.7-alpine3.16
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run: 
+          name: Install dependencies 
+          command: |
+              apk add --update ansible tar curl nodejs npm
+              pip install awscli
+      - run: 
+          name: Get backend url
+          command: |     
+              export BACKEND_IP=$(aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:Project,Values=udapeople" \
+              --output text)
+              echo "${API_URL}"
+              echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+              cat frontend/.env
+      - run: 
+          name: Deploy frontend objects
+          command: |
+              cd frontend
+              npm install
+              npm run build
+              tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+              aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
   
 
 workflows:
@@ -220,4 +252,6 @@ workflows:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-server]
+      - deploy-frontend:
+          requires: [run-mgrations]
     
