--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,7 +231,37 @@ jobs:
               npm run build
               tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
               aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-  
+
+
+  deploy-backend:
+    docker:
+      - image: python:3.7-alpine3.16
+    steps: 
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["71:a6:8f:bd:22:e2:4b:d8:4f:e3:35:03:b1:ef:64:d4"]  
+      - attach_workspace:
+          at: ~/
+      - run: 
+          name: Install dependencies
+          command: |
+              apk add --update ansible
+              pip install awscli
+              apk add --update --no-cache gzip nodejs npm curl
+      - run: 
+          name: Deploy backend
+          command: |
+              cd backend
+              npm install
+              npm run build
+              cd ..
+              tar -C backend -czvf artifact.tar.gz .
+              mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
+              mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
+              cd .circleci/ansible
+              echo "Contents of the inventory.txt file is ...."
+              cat inventory.txt
+              ansible-playbook -i inventory.txt deploy-backend.yml
 
 workflows:
   default:
@@ -253,5 +283,7 @@ workflows:
       - run-migrations:
           requires: [configure-server]
       - deploy-frontend:
+          requires: [run-migrations]
+      - deploy-backend: 
           requires: [run-migrations]
     
