--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -259,6 +259,46 @@ jobs:
               cat inventory.txt
               ansible-playbook -i inventory.txt deploy-backend.yml
 
+
+  smoke-test:
+    docker:
+      - image: python:3.7-alpine3.16
+    steps:
+      - checkout
+      - run: 
+          name: Install dependencies
+          command: |
+              apk add --update ansible
+              pip install awscli
+              apk add --update --no-cache tar gzip nodejs npm curl
+      - run: 
+          name: Backend smoke test 
+          command: |
+              export BACKEND_IP=$(aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicIpAddres' \
+              --filters "Name=instance-state-name,Values=running" \
+              --output text)
+              export API_URL="http://${BACKEND_IP}:3030"
+              echo $API_URL
+              if curl "${API_URL}/api/status" | grep "ok"
+              then
+                  return 0
+              else  
+                  return 1
+              fi 
+      - run: 
+          name: Frontend smoke test
+          command: |
+              export URL=$"http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
+              echo ${URL}
+              if curl -s ${URL} | grep "Welcome"
+              then
+                return 0
+              else 
+                return 1
+              fi 
+
+
 workflows:
   default:
     jobs:
@@ -282,4 +322,5 @@ workflows:
           requires: [run-migrations]
       - deploy-backend: 
           requires: [run-migrations]
-    
+      - smoke-test:
+          requires: [deploy-frontend, deploy-backend]
