Running a smoke test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -274,12 +274,14 @@ jobs:
       - run: 
           name: Backend smoke test 
           command: |
+              
               export BACKEND_IP=$(aws ec2 describe-instances \
-              --query 'Reservations[*].Instances[*].PublicIpAddres' \
-              --filters "Name=instance-state-name,Values=running" \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --output text)
+              echo "${BACKEND_IP}"
               export API_URL="http://${BACKEND_IP}:3030"
-              echo $API_URL
+              echo "${API_URL}"
               if curl "${API_URL}/api/status" | grep "ok"
               then
                   return 0
