--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,10 +276,9 @@ jobs:
           command: |
               
               export BACKEND_IP=$(aws ec2 describe-instances \
-                --query 'Reservations[*].Instances[*].PublicIpAddress' \
-                --filters "Name=instance-state-name,Values=running" \
-                --output text)
-
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=instance-state-name,Values=running" \
+              --output text)
               echo "${BACKEND_IP}"
               export API_URL="http://${BACKEND_IP}:3030"
               echo "${API_URL}"
@@ -292,7 +291,8 @@ jobs:
       - run: 
           name: Frontend smoke test
           command: |
-              URL=$"http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
+              export URL=$"http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
+              echo ${URL}
               if curl -s ${URL} | grep "Welcome"
               then
                 return 0
