--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -13,16 +13,13 @@
   become: true
   apt:
     autoremove: yes
-
-- name: "Install Node.js 13"
-  become: true
-  shell: |
-    # Install Node.js LTS version as our base Node.js version
-    curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
-    sudo apt install -y nodejs
-    # Use n version manager to use Node.js v13.8.0
-    sudo npm install --global n
-    sudo n 13.8.0
+    
+- name: Install nodeJS
+  become: yes
+  apt:
+    name: ["nodejs", "npm"]
+    state: latest
+    update_cache: yes
 
 - name: "Install pm2"
   become: true
