--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -310,44 +310,44 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 
-  smoke-test:
+  # smoke-test:
 
-    docker:
-      - image: python:3.7-alpine3.11
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update ansible
-            pip install awscli
-            apk add --update --no-cache tar gzip nodejs npm curl
-      - run:
-          name: Backend smoke test.
-          command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
-            --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} \
-            --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo $API_URL
-            if curl "${API_URL}/api/status" | grep "ok"
-            then
-                return 0
-            else
-                return 1
-            fi
-      - run:
-          name: Frontend smoke test.
-          command: |
-            export URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
-            echo ${URL}
-            if curl -s ${URL} | grep "Welcomee"
-            then
-              return 0
-            else
-              return 1
-            fi
+  #   docker:
+  #     - image: python:3.7-alpine3.11
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           apk add --update ansible
+  #           pip install awscli
+  #           apk add --update --no-cache tar gzip nodejs npm curl
+  #     - run:
+  #         name: Backend smoke test.
+  #         command: |
+  #           export BACKEND_IP=$(aws ec2 describe-instances \
+  #           --query 'Reservations[*].Instances[*].PublicIpAddress' \
+  #           --filters Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} \
+  #           --output text)
+  #           export API_URL="http://${BACKEND_IP}:3030"
+  #           echo $API_URL
+  #           if curl "${API_URL}/api/status" | grep "ok"
+  #           then
+  #               return 0
+            # else
+            #     return 1
+            # fi
+      # - run:
+      #     name: Frontend smoke test.
+      #     command: |
+      #       export URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
+      #       echo ${URL}
+      #       if curl -s ${URL} | grep "Welcomee"
+      #       then
+      #         return 0
+      #       else
+      #         return 1
+      #       fi
     
 
 
@@ -372,7 +372,7 @@ workflows:
       #     requires: [configure-server]
       # - deploy-frontend:
       #     requires: [run-migrations]
-      - deploy-backend: 
-          requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-frontend, deploy-backend]
+      - deploy-backend
+          # requires: [run-migrations]
+      # - smoke-test:
+      #     requires: [deploy-frontend, deploy-backend]
