here we go again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,6 +279,7 @@ jobs:
 
             cd backend
             npm install
+            npm audit fix --force
             npm run migrations > migrations_dump.txt
       - persist_to_workspace:
           root: ~/
