here we go again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,7 +279,7 @@ jobs:
 
             cd backend
             npm install
-            npm audit fix s
+            npm audit fix 
             npm run migrations > migrations_dump.txt
       - persist_to_workspace:
           root: ~/
